.provarCaches/00D6C0000000xA6UAI/objects/trailheadapp__Trail__c.object
<CustomObject>
    <fields>
        <fullName>trailheadapp__API_Name__c</fullName>
        <externalId>true</externalId>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>trailheadapp__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Badge_Icon__c</fullName>
        <formula>IMAGE( trailheadapp__Icon__c , Name , 50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trail Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Created_At__c</fullName>
        <description>The date/time that the Trail was created.</description>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__External_Id__c</fullName>
        <description>This field has been deprecated and is no longer being used.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field has been deprecated and is no longer being used.</inlineHelpText>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>trailheadapp__Icon__c</fullName>
        <label>Icon</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                    <default>true</default>
                    <label>Beginner</label>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>trailheadapp__Namespace__c</fullName>
        <label>Namespace</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Products__c</fullName>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Roles__c</fullName>
        <label>Roles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Tags__c</fullName>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Trail</label>
    <listViews>
        <fullName>trailheadapp__All</fullName>
        <columns>NAME</columns>
        <columns>trailheadapp__Description__c</columns>
        <columns>trailheadapp__Roles__c</columns>
        <columns>trailheadapp__Level__c</columns>
        <columns>trailheadapp__Created_At__c</columns>
        <columns>trailheadapp__Badge_Icon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>trailheadapp__Archived__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>developer</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>